# My-Polkadot-Orcale

./: .gitignore  Cargo.toml  chain_spec.json  my-para-state  network.toml  para-state  para-wasm  plain_chain_spec.json  raw_chain_spec.json  rococoLocalCustomSpec.json
chain-extensions/: Cargo.toml
chain-extensions/src/: lib.rs
ext_bin/: multi_parachains.toml  shiden-metadata.json  single_parachain.toml
model/: Cargo.toml
model/src/: lib.rs
node/: Cargo.toml
node/src/: command.rs  main.rs  rpc.rs  scripts_exec_manager.rs  service.rs
offchain-utils/: Cargo.toml
offchain-utils/src/: fetcher.rs  lib.rs  offchain_api_key.rs  tests.rs
pallets/custom-pallet/: Cargo.toml
pallets/custom-pallet/src/: lib.rs  mock.rs  tests.rs
pallets/ocw-pallet/: Cargo.toml
pallets/ocw-pallet/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
pallets/template/src/: lib.rs
pallets/wasmstore-pallet/: Cargo.toml
pallets/wasmstore-pallet/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  extensions.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: contracts.rs  mod.rs
script-executor/: Cargo.toml
script-executor/src/: https.rs  lib.rs  runtime.rs
scripts/: lauch_mini_zombienet.sh  lauch_mini_zombienet_dev.sh  run_dev.sh
utils/offchain-utils/: Cargo.toml
zombienet-configuration-files/: spawn-a-basic-network.toml
