[package]
name = "chain-extensions"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pallet-assets = { workspace = true }
pallet-contracts = { workspace = true }
wasmstore-pallet = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
env_logger = "0.9"
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "num-traits/std",
    "pallet-contracts/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "wasmstore-pallet/std",
    "log/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-contracts/try-runtime",
    "wasmstore-pallet/runtime-benchmarks",
    "sp-runtime/try-runtime",
]
runtime-benchmarks = [
    "pallet-assets/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "wasmstore-pallet/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
