[package]
name = "wasmstore-pallet"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
frame-benchmarking = { optional = true, workspace = true }
sp-io = { workspace = true, default-features = false}
log = {version = "0.4.14", default-features = false}
sp-std = {workspace = true,default-features = false}
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false}
lite-json = {workspace = true,default-features = false}

# PALLET IMPORT
#-------------------------------------------------------
pallet-session = {workspace = true,default-features = false}
pallet-collator-selection = {workspace = true,default-features = false}
pallet-authorship = {workspace = true,default-features = false}
pallet-balances = {workspace = true,default-features = false}
# LOCAL IMPORT
#-------------------------------------------------------
model = {path = "../../model", default-features = false}
ocw-pallet.workspace = true
[dev-dependencies]
#sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true}
sp-runtime = { workspace = true, default-features = true}
#log = {version = "0.4.14", default-features = false}
sp-std = {workspace = true,default-features = true}
[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"model/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]